backend/game/grammer.txt
Input -> Sequence

Sequence -> Job { Separator Job }

Separator -> ";" | "&"

Job -> Pipeline

Pipeline -> AndOr { "|" AndOr }

AndOr -> Command { AndOrOperator Command }

AndOrOperator -> "&&" | "||"

Command -> {Redirection} Atom {Redirection}

Atom -> SimpleCommand | Subshell | VarDeclaration

SimpleCommand -> Arg {Arg}

Arg -> Identifier | VarUse

VarDeclaration -> Identifier "=" Identifier

VarUse -> "$" Identifier

Subshell -> "(" Sequence ")"

Redirection -> Redir Identifier

Redir -> ">" | ">>" | "<" | "<<"
