backend/game/Parser.py
from __future__ import annotations

from dataclasses import dataclass
from typing import Literal


############ COMMAND LINE CLASSES ############
@dataclass
class Token:
    type: str
    value: str


Identifier = str


@dataclass
class Redirection:
    op: Literal[">", ">>", "<", "<<"]
    target: Identifier


@dataclass
class VarUse:
    name: Identifier


@dataclass
class Word:
    parts: list["Segment"]


Segment = str | VarUse


@dataclass
class VarDeclaration:
    name: Identifier
    value: Word


@dataclass
class SimpleCommand:
    args: list[Word]


@dataclass
class Pipe:
    parts: list[AndOr]


@dataclass
class Command:
    atom: Atom
    pre_redirs: list[Redirection]
    post_redirs: list[Redirection]
    assignments: list[VarDeclaration]


@dataclass
class AndOr:
    first: Command
    rest: list[tuple[Literal["&&", "||"], Command]]


@dataclass
class Job:
    pipeline: Pipe
    background: bool


@dataclass
class Sequence:
    parts: list[Job]


@dataclass
class Subshell:
    sequence: Sequence


Atom = SimpleCommand | Subshell


############ FIND CLASSES ############
class Node:
    def eval(self, f) -> bool:
        raise NotImplementedError


@dataclass
class OrNode(Node):
    left: Node
    right: Node


@dataclass
class AndNode(Node):
    left: Node
    right: Node


@dataclass
class NotNode(Node):
    node: Node


@dataclass
class FilterNode(Node):
    type: str
    value: str


@dataclass
class ExecNode(Node):
    command: list[str]
    mode: Literal[";", "+"]


@dataclass
class DeleteNode(Node):
    pass


OPERATORS = {
    "&": "AMP",
    "&&": "AND",
    "||": "OR",
    "|": "PIPE",
    "<<": "HEREDOC",
    ">>": "APPEND",
    "<": "REDIR_IN",
    ">": "REDIR_OUT",
    ";": "SEMI",
    "(": "LPAREN",
    ")": "RPAREN",
    "=": "EQUAL",
    "$": "DOLLAR",
}


def lex(text: str) -> list[Token]:
    tokens = []
    i = 0
    n = len(text)
    while i < n:
        c = text[i]
        # skip whitespace
        if c.isspace():
            i += 1
            continue
        # handle escape globally
        if c == "\\" and i + 1 < n:
            tokens.append(Token("WORD", text[i + 1]))
            i += 2
            continue
        # check 2-char operators
        if i + 1 < n:
            two = text[i : i + 2]
            if two in OPERATORS:
                tokens.append(Token(OPERATORS[two], two))
                i += 2
                continue
        # check 1-char operators
        if c in OPERATORS:
            tokens.append(Token(OPERATORS[c], c))
            i += 1
            continue
        # quoted strings
        if c == '"' or c == "'":
            quote = c
            i += 1
            buf = ""
            while i < n:
                if text[i] == quote:
                    break
                if quote == '"' and text[i] == "\\" and i + 1 < n:
                    i += 1
                    buf += text[i]
                else:
                    buf += text[i]
                i += 1
            if i >= n:
                raise SyntaxError("Unterminated quote")
            tokens.append(Token("WORD", buf))
            i += 1
            continue
        # normal word
        buf = ""
        while i < n:
            c = text[i]
            # stop if unescaped operator or whitespace
            if c.isspace() or c in "|&;()<>$\"'":
                break
            # handle escape
            if c == "\\" and i + 1 < n:
                i += 1
                buf += text[i]
            else:
                buf += c
            i += 1
        tokens.append(Token("WORD", buf))
    return tokens


class CommandParser:
    def __init__(self, tokens):
        self.tokens = tokens
        self.pos = 0

    def peek(self) -> Token | None:
        return self.tokens[self.pos] if self.pos < len(self.tokens) else None

    def consume(self, expected_type=None):
        tok = self.peek()
        if expected_type and (tok is None or tok.type != expected_type):
            actual = "end of input" if tok is None else tok.type
            raise SyntaxError(f"Expected {expected_type}, got {actual}")
        self.pos += 1
        return tok

    # entry point
    def parse(self):
        return self.parse_sequence()

    def parse_sequence(self) -> Sequence:
        pipeline = self.parse_pipeline()
        result = [Job(pipeline, False)]
        while (p := self.peek()) and p.type in ("SEMI", "AMP"):
            background = p.type == "AMP"
            self.consume()
            pipeline = self.parse_pipeline()
            result.append(Job(pipeline, background))
        return Sequence(result)

    def parse_pipeline(self) -> Pipe:
        node = self.parse_andor()
        result = [node]
        while (p := self.peek()) and p.type == "PIPE":
            self.consume("PIPE")
            result.append(self.parse_andor())
        return Pipe(result)

    def parse_andor(self) -> AndOr:
        first = self.parse_command()
        rest = []
        while (p := self.peek()) and p.type in ("AND", "OR"):
            tmp = self.consume()
            if tmp is None:
                raise SyntaxError()
            rest.append((tmp.value, self.parse_command()))
        return AndOr(first, rest)

    def parse_redirections(self) -> list[Redirection]:
        result = []
        while (p := self.peek()) and (
            p.value == ">" or p.value == ">>" or p.value == "<<" or p.value == "<"
        ):
            self.consume()
            target = self.consume()
            if target is None:
                raise SyntaxError(f"expected target after {p.value}")
            result.append(Redirection(p.value, target.value))
        return result

    def split_assignment(self, word: str):
        if "=" not in word:
            return None

        name, value = word.split("=", 1)

        if not name:
            return None

        if not (name[0].isalpha() or name[0] == "_"):
            return None

        if not all(c.isalnum() or c == "_" for c in name):
            return None
        return name, value

    def parse_command(self) -> Command:
        pre_redirs = self.parse_redirections()

        assignments = []
        assignments = []

        while True:
            p = self.peek()

            if p is None or p.type != "WORD":
                break

            res = self.split_assignment(p.value)

            if not res:
                break

            name, value = res
            self.consume()

            assignments.append(VarDeclaration(name, Word([value])))

        if (p := self.peek()) is None or p.type not in ("WORD", "LPAREN"):
            if not assignments:
                raise SyntaxError("expected command")
            atom = SimpleCommand([])
            post_redirs = self.parse_redirections()
            return Command(atom, pre_redirs, post_redirs, assignments)

        atom = self.parse_atom()
        post_redirs = self.parse_redirections()
        return Command(atom, pre_redirs, post_redirs, assignments)

    def parse_word(self):
        p = self.peek()
        if p is None:
            return None

        if p.type == "WORD":
            word = self.consume()
            if word is None:
                raise SyntaxError("Admin Error: AAAB")
            return Word([word.value])

        if p.type == "DOLLAR":
            self.consume()
            name = self.consume("WORD")
            if name is None:
                raise SyntaxError("expected something after $")
            return Word([VarUse(name.value)])

        return None

    def parse_atom(self):
        if (p := self.peek()) and p.type == "LPAREN":
            return self.parse_subshell()

        args = []

        while True:
            word = self.parse_word()
            if word is None:
                break
            args.append(word)

        if not args:
            raise SyntaxError("expected command name")

        return SimpleCommand(args)

    def parse_subshell(self):
        self.consume("LPAREN")
        node = self.parse_sequence()
        self.consume("RPAREN")
        return Subshell(node)


class FindParser:
    def __init__(self, tokens) -> None:
        self.tokens = tokens
        self.pos = 0

    def peek(self) -> str | None:
        return self.tokens[self.pos] if self.pos < len(self.tokens) else None

    def consume(self, expected_type=None) -> str | None:
        tok = self.peek()
        self.pos += 1
        return tok

    # entry point
    def parse(self):
        return self.parse_or()

    def parse_or(self):
        node = self.parse_and()

        while self.peek() and self.peek() == "-o":
            self.consume()
            right = self.parse_and()
            node = OrNode(node, right)

        return node

    def parse_and(self):
        node = self.parse_factor()

        while True:
            tok = self.peek()
            if not tok or tok in [")", "-o"]:
                break

            right = self.parse_factor()
            node = AndNode(node, right)

        return node

    def parse_factor(self) -> Node:
        tok = self.peek()
        if tok is None:
            raise SyntaxError()

        if tok == "!":
            self.consume()
            return NotNode(self.parse_factor())

        if tok == "(":
            self.consume()
            node = self.parse_or()
            if self.consume() != ")":
                raise SyntaxError("Missing )")
            return node

        filt = self.consume()
        if filt is None:
            return FilterNode("", "")
        if filt in ["-true", "-false", "-empty", "-delete"]:  # Singular
            return FilterNode(filt, "")
        if filt == "-exec":
            cmd = []
            while (tok := self.peek()) is not None and tok not in (";", "+"):
                cmd.append(self.consume())
            mode = self.consume()
            if mode is None or mode != ";" or mode != "+":
                raise SyntaxError("Expected ; or +")
            return ExecNode(cmd, mode)
        val = self.consume()
        if val is None:
            raise SyntaxError(f"No value for given for: {filt}")
        return FilterNode(filt, val)


if __name__ == "__main__":
    text = ["(", "-name", "*.txt", "-o", "-true", ")", "-exec", "cat", "{}", ";"]
    parser = FindParser(text)
    ast = parser.parse()
    print(ast)
